2017-11-07  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Update test check file according to new dict.

	* tests/long-wseg.txt:
	  - 'เท่าไหร่' is now a single word, not 'เท่า|ไหร่'.

2017-11-07  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Rename AbsWordSeg::Has_Karun() to HasKaran().

	* src/abswordseg.h, src/abswordseg.cpp:
	  - Rename AbsWordSeg::Has_Karun() to HasKaran().

2017-11-06  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Replace mysterious 'mode' var with 'verbose'.

	* src/wordseg.cpp (main):
	  - Replace "char mode" variable with "bool verbose".
	  - Replace all assignments & checks of the var based on bool.

2017-11-06  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Drop commented code.

	* src/wordseg.cpp:
	  - Drop commented code for old WORDSEGDATA_DIR.

2017-11-06  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Drop undocumented option '-l'.

	* src/wordseg.cpp (Usage):
	  - Drop commented code mentioning '-l' option.
	* src/wordseg.cpp (main):
	  - Drop check for '-l' command line arg.
	  - Eliminate code for 'wholeLine == true' case.
	  - Drop now-unused 'wholeLine' var.

2017-11-06  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Drop remaining comments mentioning shaping support.

	* src/wordseg.cpp (Usage):
	  - Drop commented codes mentioning 'winlatex' and 'maclatex'
	    options.

2017-11-06  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Drop unnecessary includes in C sources.

	* src/abswordseg.cpp:
	  - Drop "worddef.h", already included in "abswordseg.h"
	* src/wordseg.cpp:
	  - Drop unused <time.h>

2017-11-02  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Update dictionary from thailatex GitHub.

	* data/tdict-city.txt:
	* data/tdict-common.txt:
	* data/tdict-district.txt:
	* data/tdict-geo.txt:
	* data/tdict-history.txt:
	* data/tdict-ict.txt:
	* data/tdict-lang-ethnic.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt:
	* data/tdict-spell.txt: